# tinybot

./: README.md  index.html  manifest.json  script.js  style.css  webllm.min.js
.github/workflows/: android-build.yml  build-apk.yml
android/: settings.gradle.kts
android/.github/workflows/: build-apk.yml
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/assets/: model.gguf
android/app/src/main/cpp/: CMakeLists.txt  llama_stub.cpp  llama_stub.h  native-lib.cpp
android/app/src/main/java/com/example/tinybot/: MainActivity.kt  NativeBridge.kt
android/app/src/main/res/layout/: activity_main.xml
android/app/src/main/res/values/: themes.xml
static/: app.js  style.css
